# gesso

./: Cargo.toml  README.md  llms.txt
.spool/events/: 2026-02-12.jsonl  2026-02-14.jsonl
crates/gesso/: Cargo.toml
crates/gesso/benches/: quad_bench.rs
crates/gesso/examples/: hello_window.rs
crates/gesso/src/: lib.rs
crates/gesso_core/: Cargo.toml
crates/gesso_core/src/: context.rs  geometry.rs  lib.rs
crates/gesso_core/src/metal/: mod.rs  shaders.metal
crates/motif/: Cargo.toml
crates/motif/benches/: quad_render.rs  scene_build.rs
crates/motif/examples/: hello_window.rs
crates/motif/src/: lib.rs
crates/motif_core/: Cargo.toml
crates/motif_core/src/: geometry.rs  scene.rs
crates/motif_core/src/metal/: mod.rs  shaders.metal
docs/plans/: 2026-02-11-draw-abstraction-design.md  2026-02-11-draw-abstraction-implementation.md  2026-02-11-geometry-implementation.md  2026-02-11-geometry-module-design.md
scripts/: init_crate.sh
