[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Nate Butler <iamnbutler@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/iamnbutler/motif"
homepage = "https://github.com/iamnbutler/motif"
keywords = ["ui", "graphics", "rendering", "metal", "gpu"]
categories = ["gui", "graphics", "rendering"]

[workspace.dependencies]
